[package]
name = "coherence-core-desktop"
version = "0.1.0"
description = "CoherenceCore Desktop - Biophysical resonance wellness tool"
authors = ["CoherenceCore Team"]
edition = "2021"

[lib]
name = "coherence_core_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
rustfft = "6.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
